databruce/static/databruce/css/hb_style.css
/* ... */
.card-header,
.card-footer,
.card,
.list-group-item {
    background-color: var(--background-color-subtle) !important;
    border-color: var(--border-color-base) !important;
    color: var(--text-color-default) !important;
}

th,
tr:not(.set-header) td:not(.songnum, .position, .highlighted) {
    background-color: var(--background-color-subtle) !important;
}

.form-control,
.form-select,
.form-select-sm {
    background-color: var(--background-color-muted) !important;
}

/* song num cell background when not position */
td.songnum:not(:is([class*="opener"], [class*="closer"])) {
    background-color: var(--background-color-muted) !important;
    color: var(--text-color-default) !important;
}

table th {
    font-size: var(--text-sm) !important;
}

td {
    line-height: 1rem !important;
    padding-top: 0.3rem !important;
    padding-bottom: 0.3rem !important;
}

table.dataTable tbody tr:not(.album-header) td,
tr.album-header>th {
    font-size: var(--text-xs) !important;
}

table.dataTable td:not(.highlighted) a:not(.text-reset) {
    color: var(--color-primary-dark) !important;
}

/* setlist table highlighting, different shades for light and dark */
td.highlighted {
    background-color: var(--background-color-highlight) !important;
}

/* change text color when setlist table rows highlighted */
td.highlighted *:not(.badge) {
    color: var(--text-color-default) !important;
}

table.dataTable td a {
    font-weight: 500 !important;
}

/* font weight for not song num */
table.dataTable td:not(.songnum) {
    font-weight: 300 !important;
}

/* padding for non-set header rows */
table.dataTable tbody tr td {
    padding-top: 0.15rem !important;
    padding-bottom: 0.15rem !important;
}

/* remove border from album header in breakdown card */
tr.album-header>td {
    border-width: 0px !important;
}

/* align all calendar day cell content to middle vertically */
td:not(.fc-day) {
    align-items: center;
    vertical-align: middle !important;
}

.badge {
    padding: 0.2em 0.45em !important;
    border-radius: calc(infinity * 1px) !important;
    font-weight: 500 !important;
}

td .badge {
    font-size: var(--text-2xs) !important;
}

/* custom badges for the badge row on event detail */
.badge-row span.badge {
    font-weight: 500 !important;
    font-size: var(--text-xs) !important;
    display: inline-flex;
    padding: 0.1rem 0.3rem !important;
    border-radius: calc(infinity * 1px) !important;
}

td .segue,
td .check {
    vertical-align: middle;
}

td .segue,
td .badge,
td .check {
    display: inline-flex;
    margin-top: -3px !important;
}

.segue {
    font-size: var(--text-xl) !important;
    font-weight: 300 !important;
    color: var(--text-color-default) !important;
}

/* remove bottom margin from paragraphs in event note card */
blockquote p:last-of-type {
    margin-bottom: 0;
}

blockquote {
    margin: 1rem 0 !important;
}

/* smaller font size for setlist notes */
.setlist-note {
    font-size: 0.7rem !important;
}

.card,
.card-body {
    overflow: scroll !important;
}

/* fix for scrolling table in card  */
/* does this value seem odd? yes */
/* why? because it is the absolute max width that the scrollable table can go before it affects the rest of the page */
@media (max-width: 960px) {

    .dt-scroll,
    .dt-scroll-head,
    .dt-scroll-body {
        max-width: 97.5vw !important;
    }
}

/* remove horizonal margin from empty datatable rows */
div.dt-container div.dt-layout-full> :only-child {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

/* datatable control labels */
div.dt-container label {
    font-weight: normal;
    white-space: nowrap;
    text-align: left;
}

.btn-group,
.btn-group-vertical {
    position: relative;
    display: block;
}

/* datatable category dropdown button */
#dropdown-btn {
    margin-left: 0.5em;
    border-radius: var(--bs-btn-border-radius) !important;
}

/* hide empty event note paragraphs, added by filter tag */
.event-note p:empty {
    display: none !important;
}

/* hide empty event note breaks, added by filter tag */
.event-note br:last-of-type {
    display: none !important;
}

/* calendar */
td.fc-day {
    padding: 0.1rem !important;
}

.fc-event {
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
    text-wrap: wrap !important;
    word-wrap: break-word !important;
}

/* dropdown items */
.dropdown-item:hover {
    background-color: var(--color-hover) !important;
}

/* badges highlight on hover */
.badge-row .badge:hover {
    box-shadow: inset 0 0 100px 100px 255, 255, 255, 0.1;
}

/* remove border from disabled buttons */
button:disabled {
    border-color: none !important
}

/* highlighting on jquery autocomplete menu */
.ui-state-active:hover,
.ui-state-active {
    background-color: var(--color-primary) !important;
    border-color: var(--color-primary) !important;
    color: var(--text-color-default) !important;
}

/* column control dropdown */
.dtcc-dropdown.dropdown-menu {
    font-size: var(--text-xs) !important;
}

.dropdown-item {
    font-size: var(--text-sm) !important;
    color: var(--text-color-default) !important;
    overflow: hidden !important;
}

.dropdown-menu .dropdown-item {
    border-radius: 0.3rem !important;
}

.dropdown-item:hover {
    text-decoration: none !important;
}

/* progress bar for album breakdown */
.progress {
    height: 5px !important;
    border-radius: 0.2rem !important;
    background-color: var(--background-color-emphasis) !important;
}

/* album breakdown on hover */
.album-breakdown:hover {
    cursor: pointer;
    background-color: color-mix(in oklab, var(--color-active) 15%, transparent) !important;
}

.progress-bar {
    border-radius: inherit !important;
    background-color: var(--color-primary) !important;
}

/* hide empty table cells */
#albumTable tr td:empty {
    display: none !important;
}
/* ... */

